# universal-lsif

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  configs.rs  crawler.rs  indexer.rs  language_config.toml  lsif_data_cache.rs  main.rs
src/emitter/: file_emitter.rs
src/lsp/: mod.rs  parse_helpers.rs
src/protocol/: types.rs
src/tests/: mod.rs
src/tests/test_data/rust/: Cargo.toml
src/tests/test_data/rust/src/: main.rs
