[package]
authors = ["alidn <ali.nili128@gmail.com>"]
edition = "2018"
name = "universal-lsif"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
ignore = "*"
indicatif = "0.15.0"
jsonrpc-lite = "*"
languageserver-types = "*"
lazy_static = "*"
rayon = "*"
regex = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
structopt = "*"
toml = "0.5.8"
url_serde = "*"
